# fedigents

./: .gitignore  Cargo.toml  Trunk.toml  agents.md  flake.nix  index.html  opencode.json  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
.opencode/instructions/: playwright-local.md
.opencode/skills/playwright-local-app/: SKILL.md
crates/fedigents-web/: Cargo.toml  index.html
crates/fedigents-web/src/: agent.rs  app.rs  browser.js  browser.rs  calc.rs  fedimint.rs  main.rs  ppq.rs  styles.css  wallet-worker.js  wallet_runtime.rs
public/: manifest.webmanifest  sw.js
scripts/: playwright-mcp
skills/: generate-images.md  gift-cards.md  index.json
