[package]
name = "fedigents-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
console_error_panic_hook = "0.1.7"
fedimint-bip39 = { path = "../../../fedimint/fedimint-bip39" }
fedimint-client = { path = "../../../fedimint/fedimint-client" }
fedimint-connectors = { path = "../../../fedimint/fedimint-connectors" }
fedimint-core = { path = "../../../fedimint/fedimint-core" }
fedimint-cursed-redb = { path = "../../../fedimint/fedimint-cursed-redb" }
fedimint-derive-secret = { path = "../../../fedimint/crypto/derive-secret" }
fedimint-eventlog = { path = "../../../fedimint/fedimint-eventlog" }
fedimint-ln-client = { path = "../../../fedimint/modules/fedimint-ln-client", features = ["cli"] }
fedimint-meta-client = { path = "../../../fedimint/modules/fedimint-meta-client" }
fedimint-meta-common = { path = "../../../fedimint/modules/fedimint-meta-common" }
fedimint-mint-client = { path = "../../../fedimint/modules/fedimint-mint-client" }
fedimint-wallet-client = { path = "../../../fedimint/modules/fedimint-wallet-client" }
futures = "0.3.31"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
leptos = { version = "0.7.8", default-features = false, features = ["csr"] }
lightning-invoice = "0.33.2"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.41"
tracing-wasm = "0.2.1"
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "Clipboard",
  "FileSystemFileHandle",
  "FileSystemSyncAccessHandle",
  "FileSystemDirectoryHandle",
  "DedicatedWorkerGlobalScope",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlVideoElement",
  "MessageEvent",
  "MediaDevices",
  "MediaStream",
  "MediaStreamTrack",
  "Navigator",
  "ServiceWorkerContainer",
  "StorageManager",
  "Window",
  "Worker"
] }

[lints]
workspace = true
