[package]
name = "fedigents-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
console_error_panic_hook = "0.1.7"
fedimint-bip39 = "0.10.0"
fedimint-client = "0.10.0"
fedimint-connectors = "0.10.0"
fedimint-core = "0.10.0"
fedimint-cursed-redb = "0.10.0"
fedimint-derive-secret = "0.10.0"
fedimint-eventlog = "0.10.0"
fedimint-ln-client = "0.10.0"
fedimint-meta-client = "0.10.0"
fedimint-meta-common = "0.10.0"
fedimint-mint-client = "0.10.0"
fedimint-wallet-client = "0.10.0"
futures = "0.3.31"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
leptos = { version = "0.7.8", default-features = false, features = ["csr"] }
leptos-qr-scanner = { git = "https://github.com/elsirion/leptos-qr-scanner", rev = "cfaa12752ec75f66355c9ef5d9e97d2f64e231fd" }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rig-core = { version = "0.30", default-features = false, features = ["wasm"] }
schemars = "1"
lightning-invoice = "0.33.2"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.41"
tracing-wasm = "0.2.1"
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "Clipboard",
  "Document",
  "FileSystemFileHandle",
  "FileSystemSyncAccessHandle",
  "FileSystemDirectoryHandle",
  "DedicatedWorkerGlobalScope",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "Location",
  "MessageEvent",
  "Navigator",
  "ServiceWorkerContainer",
  "StorageManager",
  "Url",
  "PointerEvent",
  "Window",
  "Worker"
] }

[lints]
workspace = true
